[gd_scene load_steps=4 format=3 uid="uid://cc3qciss8l58m"]

[ext_resource type="Texture2D" uid="uid://deak4o1xsi0rn" path="res://Sprites/icon.svg" id="1_vc13a"]
[ext_resource type="Script" path="res://UI/upgrade_button.gd" id="2_uptse"]
[ext_resource type="FontFile" uid="uid://cjg5r33t68mr1" path="res://fonts/PressStart2P-vaV7.ttf" id="3_j35tg"]

[node name="Button" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
icon = ExtResource("1_vc13a")
script = ExtResource("2_uptse")

[node name="Line2D" type="Line2D" parent="."]
z_index = -5

[node name="Panel" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = -47.0
offset_top = -176.0
offset_right = 409.0
offset_bottom = -2.0
metadata/_edit_group_ = true

[node name="Description" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 18.0
offset_top = 20.0
offset_right = 375.0
offset_bottom = 58.0
theme_override_fonts/normal_font = ExtResource("3_j35tg")
text = "Increase speed by 0"

[node name="BuyButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 245.0
offset_top = 110.0
offset_right = 429.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("3_j35tg")
text = "Buy"

[node name="CancelButton" type="Button" parent="Panel"]
offset_left = 25.0
offset_top = 109.0
offset_right = 209.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("3_j35tg")
text = "Close"

[node name="Details" type="RichTextLabel" parent="Panel"]
offset_left = 351.0
offset_top = 78.0
offset_right = 434.0
offset_bottom = 116.0
theme_override_fonts/normal_font = ExtResource("3_j35tg")
text = "(0/0)"

[connection signal="pressed" from="Panel/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="Panel/CancelButton" to="." method="_on_cancel_button_pressed"]
